# jihanki

./: pyproject.toml
.github/workflows/: ci.yml
docs/manifest/: build.md  output.md
src/jihanki/: webserver.py  worker.py
src/jihanki/pipeline/: __init__.py  build.py  schema.py
src/jihanki/pipeline/output/: __init__.py  destination.py  notification.py
tests/manifest/: test_build.py  test_input.py  test_output.py
tests/worker/: test_output_helpers.py  test_shared_cache.py
